# remote-peripheral

./: README.md
docs/superpowers/plans/: 2026-05-01-remote-peripheral.md
docs/superpowers/specs/: 2026-05-01-remote-peripheral-design.md
remote_peripheral/: CMakeLists.txt
remote_peripheral/include/: mcu_internal.h  mcu_protocol.h  mcu_transport.h  remote_gpio.h  remote_i2c.h  remote_pwm.h  remote_spi.h
remote_peripheral/src/: mcu_protocol.c  mcu_transport.c  remote_gpio.c  remote_i2c.c  remote_pwm.c  remote_spi.c
remote_peripheral/tests/: test_gpio.c  test_harness.h  test_i2c.c  test_protocol.c  test_pwm.c  test_spi.c  test_transport.c
